src/ui/radarr_ui/root_folders/snapshots/managarr__ui__radarr_ui__root_folders__root_folders_ui_tests__tests__root_folders_ui_renders_with_root_folders.snap
---
source: src/ui/radarr_ui/root_folders/root_folders_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Path                                                                 Free Space               Unmapped Folders       
=> /movies                                                              100.00 GB                0                      
   /media/movies                                                        50.00 GB                 0
